feat: sessionrepository endpoints + db tests
