# backend/internal/service/handler/session_resource/handler.go
@@ -1,0 +1,11 @@
+package sessionresource
+
+import (
+	"specialstandard/internal/storage"
+	"specialstandard/internal/xvalidator"
+)
+
+type Handler struct {
+	sessionResourceRepository storage.SessionResourceRepository
+	validator                 *xvalidator.XValidator
+}
